--- a/index.html
+++ b/index.html
@@ -1,7 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>fork.family</title>
+  <link rel="stylesheet" href="style.css">
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<!-- header -->
+  <header>
+    <h1>you just got pronged</h1>
+  </header>
+
+<!-- Main Page -->
+  <main>
+    <p>imagine getting pronged in 2025</p>
+  </main>
+
+  <!-- Footer HTML just in case I need it -->
+  <footer>
+  </footer>
+
 </body>
 </html>
