--- a/index.html
+++ b/index.html
@@ -24,10 +24,12 @@
       <p id="status"></p>
     </div>
 
-    <p style="margin-top: 20px; font-weight: bold;">previous messages:</p>
+    <p>you can prong a friend, leave it in a park, or hold onto it for years and prong someone else</p>
+
+    <p style="margin-top: 4px;">previous messages:</p>
     <ul id="messagesList"></ul>
 
-    <p>you can prong a friend, leave it in a park, or hold onto it for years and prong someone else</p>
+
   </div>
 </main>
 
