--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   </div>
 
   <div id="codeArea" style="display: none;">
-    <p>you have fork <span id="codeDisplay"></span> — leave a message for the next holder of the fork</p>
+    <p>you have fork <span id="codeDisplay"></span></p>
+    <p>leave a message for the next holder of the fork</p>
 
     <div id="messageSection">
       <textarea id="messageInput" placeholder="you can only leave one message"></textarea><br>
@@ -34,8 +35,8 @@
 </main>
 
 <script>
-  const validCodes = ["143", "984", "fork23", "prong0", "spoon", "admin99"];
-  const adminCode = "admin99";
+  const validCodes = ["143", "committothebit"];
+  const adminCode = "committothebit";
   const projectId = "pronged-174c2";
   let currentCode = "";
 
