--- a/index.html
+++ b/index.html
@@ -17,16 +17,18 @@
 
   <div id="codeArea" style="display: none;">
     <p>you have fork <span id="codeDisplay"></span></p>
-    <p>leave a message for the next holder of the fork</p>
+    <p>leave a message for the next generation of prongs:</p>
 
     <div id="messageSection">
-      <textarea id="messageInput" placeholder="you can only leave one message"></textarea><br>
+      <textarea id="messageInput" placeholder="you can only leave one message and then you must prong someone else"></textarea><br>
       <button onclick="submitMessage()">submit</button>
       <p id="status"></p>
     </div>
 
+    <p>pass the fork</p>
     <p>you can prong a friend, leave it in a park, or hold onto it for years and prong someone else</p>
-
+    <p>prong to your heart's content</p>
+<p></p>
     <p style="margin-top: 4px;">previous messages:</p>
     <ul id="messagesList"></ul>
   </div>
