--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>get pronged</title>
   <link rel="stylesheet" href="style.css" />
+  <script src="https://openfpcdn.io/fingerprintjs/v3"></script>
 </head>
 <body>
 
@@ -36,45 +37,55 @@
 <script>
   const projectId = "pronged-174c2";
   let currentCode = "";
+  let visitorId = "";
+
+  // Load fingerprint on page load
+  FingerprintJS.load().then(fp => {
+    fp.get().then(result => {
+      visitorId = result.visitorId;
+    });
+  });
+
+  async function validateCode(code) {
+    const response = await fetch(`https://firestore.googleapis.com/v1/projects/${projectId}/databases/(default)/documents/messages/${code}`);
+    return response.ok;
+  }
 
   async function loadMessages() {
     const code = document.getElementById("codeInput").value.trim();
-    currentCode = code;
-
-    const res = await fetch(`https://us-central1-${projectId}.cloudfunctions.net/getMessages`, {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ code })
-    });
-
-    const data = await res.json();
-
-    if (data.error) {
-      alert(data.error);
+    if (!await validateCode(code)) {
+      alert("That code isn’t valid.");
       return;
     }
 
+    currentCode = code;
     document.getElementById("codeDisplay").textContent = code;
     document.getElementById("entryArea").style.display = "none";
     document.getElementById("codeArea").style.display = "block";
-    document.getElementById("messageSection").style.display = "block";
 
     const list = document.getElementById("messagesList");
     list.innerHTML = "";
 
-    const messages = data.messages || [];
-    if (messages.length === 0) {
-      list.innerHTML = "<li>This is a brand new fork.</li>";
-    } else {
-      messages.forEach(entry => {
-        const text = entry.text;
-        const timestamp = new Date(entry.timestamp).toLocaleString();
-        const prefix = entry.code ? `[${entry.code}] ` : "";
-        const li = document.createElement("li");
-        li.textContent = `${prefix}${text} — ${timestamp}`;
-        list.appendChild(li);
+    fetch(`https://us-central1-${projectId}.cloudfunctions.net/getMessages?code=${code}`)
+      .then(res => res.json())
+      .then(data => {
+        const messages = data.messages || [];
+        if (messages.length === 0) {
+          list.innerHTML = "<li>This is a brand new fork.</li>";
+        } else {
+          messages.forEach(entry => {
+            const text = entry.text;
+            const timestamp = new Date(entry.timestamp).toLocaleString();
+            const prefix = entry.code ? `[${entry.code}] ` : "";
+            const li = document.createElement("li");
+            li.textContent = `${prefix}${text} — ${timestamp}`;
+            list.appendChild(li);
+          });
+        }
+      })
+      .catch(() => {
+        list.innerHTML = "<li>Error loading messages.</li>";
       });
-    }
   }
 
   function submitMessage() {
@@ -84,27 +95,31 @@
       return;
     }
 
+    if (!visitorId) {
+      alert("Device verification failed. Please refresh and try again.");
+      return;
+    }
+
     const cloudFunctionUrl = `https://us-central1-${projectId}.cloudfunctions.net/submitMessage`;
 
     fetch(cloudFunctionUrl, {
       method: "POST",
       headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ code: currentCode, message })
+      body: JSON.stringify({ code: currentCode, message, visitorId })
     })
-    .then(res => res.json())
-    .then(data => {
-      if (data.success) {
-        document.getElementById("status").textContent = "Message posted!";
-        document.getElementById("messageInput").value = "";
-        loadMessages();
-      } else {
-        document.getElementById("status").textContent = data.error;
-      }
-    })
-    .catch(() => {
-      document.getElementById("status").textContent =
-        "Something went wrong submitting your message.";
-    });
+      .then(res => res.json())
+      .then(data => {
+        if (data.success) {
+          document.getElementById("status").textContent = "Message posted!";
+          document.getElementById("messageInput").value = "";
+          loadMessages();
+        } else {
+          document.getElementById("status").textContent = data.error;
+        }
+      })
+      .catch(() => {
+        document.getElementById("status").textContent = "Something went wrong submitting your message.";
+      });
   }
 </script>
 
