--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
     <p>leave a message for the next generation of prongs:</p>
 
     <div id="messageSection">
-      <textarea id="messageInput" placeholder="you can only leave one message and then you must prong someone else - signing your name is optional"></textarea><br>
+      <textarea id="messageInput" placeholder="you can only leave one message per month - signing is optional"></textarea><br>
       <button onclick="submitMessage()">submit</button>
       <p id="status"></p>
     </div>
 
-    <p>pass the fork</p>
+    <p>pass the fork on to someone else</p>
     <p>you can prong a friend, leave it in a park, or hold onto it for years and prong someone else</p>
     <p>prong to your heart's content</p>
     <p style="margin-top: 4px;">previous messages:</p>
