--- a/index.html
+++ b/index.html
@@ -47,16 +47,22 @@
   });
 
   async function validateCode(code) {
-    const response = await fetch(`https://firestore.googleapis.com/v1/projects/${projectId}/databases/(default)/documents/messages/${code}`);
-    return response.ok;
-  }
+  const response = await fetch(`https://firestore.googleapis.com/v1/projects/${projectId}/databases/(default)/documents/codes/${code}`);
+  return response.ok;
+}
+
 
   async function loadMessages() {
-    const code = document.getElementById("codeInput").value.trim();
-    if (!await validateCode(code)) {
-      alert("That code isn’t valid.");
-      return;
-    }
+  const code = document.getElementById("codeInput").value.trim();
+  if (!code) {
+    alert("Please enter a fork code.");
+    return;
+  }
+
+  if (!await validateCode(code)) {
+    alert("That code isn’t valid.");
+    return;
+  }
 
     currentCode = code;
     document.getElementById("codeDisplay").textContent = code;
