--- a/index.html
+++ b/index.html
@@ -47,22 +47,24 @@
   });
 
   async function validateCode(code) {
-  const response = await fetch(`https://firestore.googleapis.com/v1/projects/${projectId}/databases/(default)/documents/codes/${code}`);
-  return response.ok;
-}
-
+    const response = await fetch(
+      `https://firestore.googleapis.com/v1/projects/${projectId}/databases/(default)/documents/codes/${code}`
+    );
+    const data = await response.json();
+    return !data.error && !data.hasOwnProperty("missing");
+  }
 
   async function loadMessages() {
-  const code = document.getElementById("codeInput").value.trim();
-  if (!code) {
-    alert("Please enter a fork code.");
-    return;
-  }
+    const code = document.getElementById("codeInput").value.trim();
+    if (!code) {
+      alert("Please enter a fork code.");
+      return;
+    }
 
-  if (!await validateCode(code)) {
-    alert("That code isn’t valid.");
-    return;
-  }
+    if (!await validateCode(code)) {
+      alert("That code isn’t valid.");
+      return;
+    }
 
     currentCode = code;
     document.getElementById("codeDisplay").textContent = code;
