--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>get pronged</title>
   <link rel="stylesheet" href="style.css" />
-  <script src="https://openfpcdn.io/fingerprintjs/v3"></script>
+  <link rel="icon" href="data:," />
+  <script src="https://openfpcdn.io/fingerprintjs/v3/fingerprint.min.js"></script>
 </head>
 <body>
 
@@ -39,29 +40,29 @@
   let currentCode = "";
   let visitorId = "";
 
-  // Load FingerprintJS and capture the visitorId
+  // Hardcoded fork codes — you can update this list as needed
+  const validCodes = ["21396", "74167", "abc123", "fork2025"];
+
+  // Load FingerprintJS
   FingerprintJS.load().then(fp => {
     fp.get().then(result => {
       visitorId = result.visitorId;
     });
   });
 
-  async function validateCode(code) {
-    const response = await fetch(
-      `https://firestore.googleapis.com/v1/projects/${projectId}/databases/(default)/documents/codes/${code}`
-    );
-    const data = await response.json();
-    return !data.error && !data.hasOwnProperty("missing");
+  function isValidCode(code) {
+    return validCodes.includes(code);
   }
 
   async function loadMessages() {
     const code = document.getElementById("codeInput").value.trim();
+
     if (!code) {
       alert("Please enter a fork code.");
       return;
     }
 
-    if (!await validateCode(code)) {
+    if (!isValidCode(code)) {
       alert("That code isn’t valid.");
       return;
     }
