fingerprint fixed again

--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>get pronged</title>
   <link rel="stylesheet" href="style.css" />
-  <script src="https://cdn.jsdelivr.net/npm/@fingerprintjs/fingerprintjs@3/dist/fp.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@fingerprintjs/fingerprintjs@3/dist/fp.min.js" crossorigin="anonymous"></script>
+<script>
+  // Initialize FingerprintJS and store the visitorId
+  FingerprintJS.load().then(fp => {
+    fp.get().then(result => {
+      visitorId = result.visitorId;
+    });
+  });
+</script>
 </head>
 <body>
 
