--- a/index.html
+++ b/index.html
@@ -55,41 +55,48 @@
   });
 
   async function loadMessages() {
-    const code = document.getElementById("codeInput").value.trim();
-    if (!code) {
-      alert("Please enter a fork code.");
-      return;
-    }
-
-    currentCode = code;
-    document.getElementById("codeDisplay").textContent = code;
-    document.getElementById("entryArea").style.display = "none";
-    document.getElementById("codeArea").style.display = "block";
-
-    const list = document.getElementById("messagesList");
-    list.innerHTML = "";
-
-    fetch(`https://us-central1-${projectId}.cloudfunctions.net/getMessages?code=${code}`)
-      .then(res => res.json())
-      .then(data => {
-        const messages = data.messages || [];
-        if (messages.length === 0) {
-          list.innerHTML = "<li>This is a brand new fork.</li>";
-        } else {
-          messages.forEach(entry => {
-            const text = entry.text;
-            const timestamp = new Date(entry.timestamp).toLocaleString();
-            const prefix = entry.code ? `[${entry.code}] ` : "";
-            const li = document.createElement("li");
-            li.textContent = `${prefix}${text} — ${timestamp}`;
-            list.appendChild(li);
-          });
-        }
-      })
-      .catch(() => {
-        list.innerHTML = "<li>forkive me! error loading messages.</li>";
-      });
+  const code = document.getElementById("codeInput").value.trim();
+  if (!code) {
+    alert("Please enter a fork code.");
+    return;
   }
+
+  // Try fetching messages directly — backend will validate the code
+  fetch(`https://us-central1-pronged-174c2.cloudfunctions.net/getMessages?code=${code}`)
+    .then(res => {
+      if (!res.ok) {
+        throw new Error("Invalid fork code");
+      }
+      return res.json();
+    })
+    .then(data => {
+      currentCode = code;
+      document.getElementById("codeDisplay").textContent = code;
+      document.getElementById("entryArea").style.display = "none";
+      document.getElementById("codeArea").style.display = "block";
+
+      const list = document.getElementById("messagesList");
+      list.innerHTML = "";
+
+      const messages = data.messages || [];
+      if (messages.length === 0) {
+        list.innerHTML = "<li>This is a brand new fork.</li>";
+      } else {
+        messages.forEach(entry => {
+          const text = entry.text;
+          const timestamp = new Date(entry.timestamp).toLocaleString();
+          const prefix = entry.code ? `[${entry.code}] ` : "";
+          const li = document.createElement("li");
+          li.textContent = `${prefix}${text} — ${timestamp}`;
+          list.appendChild(li);
+        });
+      }
+    })
+    .catch(() => {
+      alert("That code isn’t valid.");
+    });
+}
+
 
   function submitMessage() {
     const message = document.getElementById("messageInput").value.trim();
